--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClCompile Include="SourceCodo\SoundManagerGameOver.cpp">
       <Filter>Hiyosi\Sound</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCodo\EnemyChara.cpp">
+      <Filter>Hiyosi\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCodo\Charactor.h">
@@ -460,6 +463,9 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\SoundManagerGameOver.h">
       <Filter>Hiyosi\Sound</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\EnemyChara.h">
+      <Filter>Hiyosi\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
