--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -362,9 +362,6 @@
     <ClInclude Include="SourceCodo\Resource.h">
       <Filter>Classwork\System</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCodo\Sound.h">
-      <Filter>Classwork\System</Filter>
-    </ClInclude>
     <ClInclude Include="SourceCodo\CXInput.h">
       <Filter>Classwork\System</Filter>
     </ClInclude>
@@ -460,6 +457,9 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\FactorySoundManager.h">
       <Filter>Tahara\Factory</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\Sound.h">
+      <Filter>Hiyosi</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
