--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClCompile Include="SourceCodo\OperationString.cpp">
       <Filter>Tahara</Filter>
     </ClCompile>
+    <ClCompile Include="Stage.cpp">
+      <Filter>Hiyosi</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCodo\Charactor.h">
@@ -466,6 +469,9 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\Sound.h">
       <Filter>Classwork\System</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage.h">
+      <Filter>Hiyosi</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
