--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="SourceCodo\Sprite2DCenter.cpp" />
     <ClCompile Include="SourceCodo\Stage.cpp" />
     <ClCompile Include="SourceCodo\TestObj.cpp" />
+    <ClCompile Include="SourceCodo\UiText.cpp" />
     <ClCompile Include="SourceCodo\Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -236,6 +237,8 @@
     <ClInclude Include="SourceCodo\Sprite2DCenter.h" />
     <ClInclude Include="SourceCodo\Stage.h" />
     <ClInclude Include="SourceCodo\TestObject.h" />
+    <ClInclude Include="SourceCodo\TextSpriteStruct.h" />
+    <ClInclude Include="SourceCodo\UiText.h" />
     <ClInclude Include="SourceCodo\Weapon.h" />
   </ItemGroup>
   <ItemGroup>
